# chess

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
benches/: benches.rs
chess/: all.html  constant.ALL_CASTLE_RIGHTS.html  constant.ALL_COLORS.html  constant.ALL_FILES.html  constant.ALL_PIECES.html  constant.ALL_RANKS.html  constant.ALL_SQUARES.html  constant.EDGES.html  constant.EMPTY.html  constant.NUM_CASTLE_RIGHTS.html  constant.NUM_COLORS.html  constant.NUM_FILES.html  constant.NUM_PIECES.html  constant.NUM_PROMOTION_PIECES.html  constant.NUM_RANKS.html  constant.NUM_SQUARES.html  constant.PROMOTION_PIECES.html  enum.Action.html  enum.BoardStatus.html  enum.CastleRights.html  enum.Color.html  enum.Error.html  enum.File.html  enum.GameResult.html  enum.Piece.html  enum.Rank.html  fn.between.html  fn.construct.html  fn.get_adjacent_files.html  fn.get_bishop_moves.html  fn.get_bishop_rays.html  fn.get_file.html  fn.get_king_moves.html  fn.get_knight_moves.html  fn.get_pawn_attacks.html  fn.get_pawn_moves.html  fn.get_pawn_quiets.html  fn.get_rank.html  fn.get_rook_moves.html  fn.get_rook_rays.html  (+11 more)
chess/bitboard/: constant.EMPTY.html  struct.BitBoard.html
chess/board/: enum.BoardStatus.html  struct.Board.html
chess/board_builder/: struct.BoardBuilder.html
chess/cache_table/: struct.CacheTable.html
chess/castle_rights/: constant.ALL_CASTLE_RIGHTS.html  constant.NUM_CASTLE_RIGHTS.html  enum.CastleRights.html
chess/chess_move/: struct.ChessMove.html
chess/color/: constant.ALL_COLORS.html  constant.NUM_COLORS.html  enum.Color.html
chess/construct/: fn.construct.html
chess/error/: enum.Error.html
chess/file/: constant.ALL_FILES.html  constant.NUM_FILES.html  enum.File.html
chess/game/: enum.Action.html  enum.GameResult.html  struct.Game.html
chess/magic/: constant.EDGES.html  fn.between.html  fn.get_adjacent_files.html  fn.get_bishop_moves.html  fn.get_bishop_rays.html  fn.get_file.html  fn.get_king_moves.html  fn.get_knight_moves.html  fn.get_pawn_attacks.html  fn.get_pawn_moves.html  fn.get_pawn_quiets.html  fn.get_rank.html  fn.get_rook_moves.html  fn.get_rook_rays.html  fn.line.html
chess/piece/: constant.ALL_PIECES.html  constant.NUM_PIECES.html  constant.NUM_PROMOTION_PIECES.html  constant.PROMOTION_PIECES.html  enum.Piece.html
chess/rank/: constant.ALL_RANKS.html  constant.NUM_RANKS.html  enum.Rank.html
chess/square/: constant.ALL_SQUARES.html  constant.NUM_SQUARES.html  struct.Square.html
docs/: index.html
implementors/failure/: trait.Fail.js
nodrop/: struct.NoDrop.html
src/: bitboard.rs  board.rs  board_builder.rs  build.rs  cache_table.rs  castle_rights.rs  chess_move.rs  color.rs  construct.rs  error.rs  fen.rs  file.rs  game.rs  lib.rs  magic.rs  main.rs  movegen.rs  piece.rs  rank.rs  square.rs  zobrist.rs
src/chess/: bitboard.rs.html  board.rs.html  board_builder.rs.html  cache_table.rs.html  castle_rights.rs.html  chess_move.rs.html  color.rs.html  construct.rs.html  error.rs.html  file.rs.html  game.rs.html  lib.rs.html  magic.rs.html  piece.rs.html  rank.rs.html  square.rs.html  zobrist.rs.html
src/gen_tables/: between.rs  bmis.rs  king.rs  (+10 more)
syn/: enum.BinOp.html  struct.Constraint.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  struct.ExprMethodCall.html  struct.ExprParen.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprRepeat.html  struct.ExprReturn.html  struct.ExprStruct.html  struct.ExprTry.html  struct.ExprTryBlock.html  struct.ExprTuple.html  struct.ExprType.html  struct.ExprUnary.html  struct.ExprUnsafe.html  struct.ExprWhile.html  struct.ExprYield.html
(+59 files in other folders)
