[package]
name = "chess"
version = "0.4.0"
authors = ["Jordan Bray <jordanbray@gmail.com>"]
description = "Fast Chess Move Generator"
build = "src/build.rs"

homepage = "https://github.com/jordanbray/chess"
repository = "https://github.com/jordanbray/chess"
readme = "README.md"
keywords = ["chess", "move", "generator"]
license = "MIT"
documentation = "https://jordanbray.github.io/chess/chess/index.html"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[build-dependencies]
rand = "0.3"

