[package]
name = "chess"
version = "3.1.1"
edition = "2018"
authors = ["Jordan Bray <jordanbray@gmail.com>"]
description = "This is a fast chess move generator.  It has a very good set of documentation, so you should take advantage of that.  It (now) generates all lookup tabels with a build.rs file, which means that very little pseudo-legal move generation requires branching.  There are some convenience functions that are exposed to, for example, find all the squares between two squares.  This uses a copy-on-make style structure, and the Board structure is as slimmed down as possible to reduce the cost of copying the board.  There are places to improve perft-test performance further, but I instead opt to be more feature-complete to make it useful in real applications.  For example, I generate both a hash of the board and a pawn-hash of the board for use in evaluation lookup tables (using Zobrist hashing).  There are two ways to generate moves, one is faster, the other has more features that will be useful if making a chess engine.  See the documentation for more details."
build = "src/build.rs"

homepage = "https://github.com/jordanbray/chess"
repository = "https://github.com/jordanbray/chess"
readme = "README.md"
keywords = ["chess", "move", "generator"]
license = "MIT"
documentation = "https://jordanbray.github.io/chess/chess/index.html"

[dependencies]
arrayvec = "0.4.10"
nodrop = "0.1.13"
failure = "0.1.5"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[build-dependencies]
rand = "0.4.2"
failure = "0.1.5"
